<resources>
    <string name="app_name">Med-Manager</string>
    <string name="msg_start_date">Start Date</string>
    <string name="msg_end_date">End Date</string>
    <string name="add_a_reminder"><u>+ Add a reminder</u></string>
    <string name="days"><u>Daily</u></string>
    <string name="reminder_time"><u>8:00 am</u></string>
    <string name="action_search">Search med list</string>
    <string name="action_sort">Sort</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="splash_caption">Never missed taking a drug</string>
    <string name="login_caption">Already a member</string>
    <string name="sign_up_caption">New User</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-Mail</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_user">NEW USER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="action_sign_out">Sign out</string>
    <string name="at">at</string>
    <string name="daily">Daily</string>
    <string name="notification_message">It\'s time to take your meds</string>
    <string name="arrow_to_indicate_the_edit_text_is_a_drop_down">Arrow to indicate the Edit Text is a drop down</string>
    <string name="end_date">End Date</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="done_button">Done Button</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="med_list_empty_view_message">It seems you have not added any meds. Get started by pressing the plus button.</string>
    <string name="med_schedule_empty_view">No med is schedule for this day</string>
</resources>
