<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.komsic.android.medmanager.ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_med_manager_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/splash_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/login_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/text_login"
        app:layout_constraintEnd_toEndOf="@+id/text_login"
        app:layout_constraintStart_toStartOf="@+id/text_login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/sign_up_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/text_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/text_sign_up"
        app:layout_constraintStart_toStartOf="@+id/text_sign_up"
        tools:text="New User" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:elevation="4dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/text_sign_up"
        app:layout_constraintStart_toStartOf="@+id/text_sign_up" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_sign_up"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
